--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ignacio Rojas" />
     <title>Edge Minimalist CSS Framework</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -21,6 +22,7 @@
     <link rel="stylesheet" href="dist/flat.css" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
+
   <body>
     <nav>
       <section>
@@ -83,26 +85,26 @@
           file and add it to the HTML.
         </p>
         <pre><code>&#x3C;head&#x3E;
-    &#x3C;link rel=&#x22;preconnect&#x22; href=&#x22;https://fonts.googleapis.com&#x22; /&#x3E;
-    &#x3C;link rel=&#x22;preconnect&#x22; href=&#x22;https://fonts.gstatic.com&#x22; crossorigin /&#x3E;
-    &#x3C;!-- Add cross browser consistency with normalize.css --&#x3E;
-    &#x3C;link
-      rel=&#x22;stylesheet&#x22;
-      href=&#x22;https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css&#x22;
-    /&#x3E;
-    &#x3C;!-- Add fonts and icons from Google --&#x3E;
-    &#x3C;link
-      href=&#x22;https://fonts.googleapis.com/css2?family=Roboto&#x26;family=Inconsolata&#x26;family=Open+Sans&#x26;display=swap&#x22;
-      rel=&#x22;stylesheet&#x22;
-    /&#x3E;
-    &#x3C;link
-      rel=&#x22;stylesheet&#x22;
-      href=&#x22;https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&#x22;
-    /&#x3E;
-    &#x3C;!-- Include the CSS Framework --&#x3E;
-    &#x3C;link rel=&#x22;stylesheet&#x22; href=&#x22;assets/css/edge.min.css&#x22; /&#x3E;
-    &#x3C;!-- Include your own customizations --&#x3E;
-    &#x3C;link rel=&#x22;stylesheet&#x22; href=&#x22;assets/css/styles.css&#x22; /&#x3E;
+  &#x3C;link rel=&#x22;preconnect&#x22; href=&#x22;https://fonts.googleapis.com&#x22; /&#x3E;
+  &#x3C;link rel=&#x22;preconnect&#x22; href=&#x22;https://fonts.gstatic.com&#x22; crossorigin /&#x3E;
+  &#x3C;!-- Add cross browser consistency with normalize.css --&#x3E;
+  &#x3C;link
+  rel=&#x22;stylesheet&#x22;
+  href=&#x22;https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css&#x22;
+  /&#x3E;
+  &#x3C;!-- Add fonts and icons from Google --&#x3E;
+  &#x3C;link
+  href=&#x22;https://fonts.googleapis.com/css2?family=Roboto&#x26;family=Inconsolata&#x26;family=Open+Sans&#x26;display=swap&#x22;
+  rel=&#x22;stylesheet&#x22;
+  /&#x3E;
+  &#x3C;link
+  rel=&#x22;stylesheet&#x22;
+  href=&#x22;https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&#x22;
+  /&#x3E;
+  &#x3C;!-- Include the CSS Framework --&#x3E;
+  &#x3C;link rel=&#x22;stylesheet&#x22; href=&#x22;assets/css/edge.min.css&#x22; /&#x3E;
+  &#x3C;!-- Include your own customizations --&#x3E;
+  &#x3C;link rel=&#x22;stylesheet&#x22; href=&#x22;assets/css/styles.css&#x22; /&#x3E;
 &#x3C;/head&#x3E;</code></pre>
       </section>
       <section id="typography">
@@ -145,6 +147,10 @@
           <ul>
             <li>
               <a href="javascript:void(0);">Menu 1</a>
+              <ul>
+                <li><a href="javascript:void(0);">Sub menu 1.1</a></li>
+                <li><a href="javascript:void(0);">Sub menu 1.2</a></li>
+              </ul>
             </li>
             <li>
               <a href="javascript:void(0);">Menu 2</a>
@@ -158,8 +164,8 @@
             <li>
               <a href="javascript:void(0);">Menu 4</a>
               <ul>
-                <li><a href="javascript:void(0);">Sub menu 1</a></li>
-                <li><a href="javascript:void(0);">Sub menu 2</a></li>
+                <li><a href="javascript:void(0);">Sub menu 4.1</a></li>
+                <li><a href="javascript:void(0);">Sub menu 4.2</a></li>
               </ul>
             </li>
           </ul>
@@ -346,7 +352,7 @@
             </tr>
           </tfoot>
         </table>
-        <table>
+        <table class="striped">
           <caption>
             Striped
           </caption>
@@ -398,7 +404,9 @@
         <div class="row">
           <div class="column">
             <article>
-              <header><h4>APIs</h4></header>
+              <header>
+                <h4>APIs</h4>
+              </header>
               <p>
                 One complete platform for building, integrating, and exposing
                 your digital services as managed APIs in the cloud, on-premises,
@@ -410,7 +418,9 @@
           </div>
           <div class="column">
             <article>
-              <header><h4>Identity</h4></header>
+              <header>
+                <h4>Identity</h4>
+              </header>
               <p>
                 So what is an identity solution? An identity solution helps
                 manage digital identities while also ensuring users are who they
@@ -425,7 +435,9 @@
           <div class="column">
             <article>
               <img src="assets/img/campain.jpeg" alt="Campain" />
-              <header><h4>Campaign Manager</h4></header>
+              <header>
+                <h4>Campaign Manager</h4>
+              </header>
               <p>
                 Campaign Manager helps you plan, execute, and analyze your
                 marketing efforts. Create an end-to-end campaign that connects
@@ -439,7 +451,9 @@
           <div class="column">
             <article>
               <img src="assets/img/chatbot.webp" alt="Logo" />
-              <header><h4>Chatbot</h4></header>
+              <header>
+                <h4>Chatbot</h4>
+              </header>
               <p>
                 A chatbot is software that simulates human-like conversations
                 with users via chat. Its key task is to answer user questions
@@ -451,7 +465,7 @@
         </div>
       </section>
       <section id="grid">
-        <h3 class="is-primary">Grid</h3>
+        <h3>Grid</h3>
         <div class="row">
           <div class="column cell">.column</div>
           <div class="column cell">.column</div>
@@ -474,7 +488,7 @@
           <code>pre</code>element.
         </p>
         <pre><code>.style1 {
-  color: #9b4dca; 
+  color: #9b4dca;
 }</code></pre>
       </section>
       <section id="utilities">
@@ -506,9 +520,9 @@
         <pre><code>:root {
   --font-family: "Roboto", sans-serif;
   --font-family-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  "Oxygen", "Ubuntu", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   --font-family-mono: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
-    monospace;
+  monospace;
   --font-color: #333;
   --font-size: 1.6rem;
   --line-height: 1.6;
@@ -533,6 +547,7 @@
       </section>
     </footer>
     <script>
+      /**
       if (
         window.matchMedia &&
         window.matchMedia("(prefers-color-scheme: dark)").matches
@@ -540,7 +555,7 @@
         document.body.classList.add("dark");
         // document.querySelector("#theme-switch").innerHTML = "🌙";
       }
-
+      */
       function switchMode(el) {
         const bodyClass = document.body.classList;
         bodyClass.contains("dark")
@@ -551,16 +566,10 @@
       function changeMode(theme) {
         switch (theme) {
           case "dark":
-            document.body.classList.remove("millicom");
             document.body.classList.add("dark");
             break;
           case "light":
             document.body.classList.remove("dark");
-            document.body.classList.remove("millicom");
-            break;
-          case "millicom":
-            document.body.classList.remove("dark");
-            document.body.classList.add("millicom");
             break;
           default:
             break;
